# Azure_TestCase

./: NOTES.md  README.md  main.py  pyproject.toml  register_model.py  run_training.py
docs/: AZURE_ML.md  DATA.md  LINEAGE.md
pipeline/bronze_to_silver/: flatten_clinicals.py  flatten_masks.py  flatten_phases.py  run.sh
pipeline/silver_to_gold/: build_gold_dataset.py
src/: train.py
